CSVManager and InterestCalculatorService